# libchardet-MSVC

./: .gitignore  CMakeLists.txt  cmake-config.h.in  dll.rc.in
src/: CMakeLists.txt
test/: CMakeLists.txt
